# notebook-experiments

./: README.md  grunnkrets-oslo-kart.ipynb  naivistic-pseudonymization.ipynb  rjdemetra-statbank.ipynb
autoviz-test/: README.md  pyproject.toml
autoviz-test/.ipynb_checkpoints/: pyproject-checkpoint.toml
autoviz-test/data/: API_NY.GDP.PCAP.PP.CD_DS2_en_csv_v2_4770425.csv
grunnkrets-oslo-kart/.ipynb_checkpoints/: grunnkrets-oslo-kart-checkpoint.ipynb
grunnkrets-oslo-kart/data/: befolkning-query.json  regexp-for-geojson.txt
grunnkrets-oslo-kart/data/.ipynb_checkpoints/: befolkning-query-checkpoint.json  oslo-grunnkrets-checkpoint.json
naivistic-pseudonymization/: naivistic-pseudonymization.ipynb  naivistic-pseudonymization.py
rjdemetra-statbank/: rjdemetra-statbank.ipynb
test/: doctest-test-test.ipynb
