[tool.poetry]
name = "autoviz-test"
version = "0.1.0"
description = ""
authors = ["Trygve Falch <trygve.falch@gmail.com>"]
readme = "README.md"
packages = [{include = "autoviz_test"}]

[tool.poetry.dependencies]
python = "^3.10"
autoviz = "^0.1.58"
ipykernel = "^6.19.4"
fastparquet = "^2022.12.0"
autovizwidget = "^0.20.3"
pyarrow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
